# prod-ready-ml

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pre-commit.yml
notebooks/: 01_packaging.ipynb  02_code_quality.ipynb  03_quality_checks.ipynb
src/animal_shelter/: __init__.py  data.py  features.py
tests/: test_data.py  test_features.py
