[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RicardoLindenbergBT", email = "ricardolindenberg@energyglobal.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  "D",  # pydocstyle
  "N",  # PEP8 names
  "I",  # isort
  "PD", # pandas-vet
  "NPY" # NumPy-specific rules
]
